src/test/resources/annotator/Proto2IllegalExtend.proto
syntax = "proto2";

package annotator;

enum RegularEnum {

}

extend <error descr="Cannot extend given type">RegularEnum</error> {

}